--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 *{
     margin: 0;
@@ -17,61 +17,86 @@ body{
 }
 
 .container{
-    max-width: 650px;
+    max-width: 1000px;
     width: 100%;
-    height: 415px;
+    height: 580px;
     background-color: white;
-    display: block;
+    display: flex;
     text-align: center;
     background: linear-gradient(135deg, rgba(255, 255, 255, 0.284), rgba(255, 255, 255, 0.223));
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
-    border-radius: 20px;
     border:1px solid rgba(255, 255, 255, 0.18);
     box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
-    border-radius: 30px 30px 30px 30px;
-    padding: 45px;
-    margin-left: auto;
-    margin-right: auto;
+    border-radius: 20px 20px 20px 20px;
+    padding: 0px;
+    margin: auto;
     
 }
 
-.judul{
-    display: flex;
-    align-items: center;
-    text-align: start;
-    margin-bottom: 30px;
-    margin-left: 30px;
+.kanan{
+    display: block;
+    max-width: 400px;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    border-radius: 0px 20px 20px 0px;
 }
 
-.judul img {
-    width: 100px;
+.kiri{
+    display: block;
+    max-width: 600px;
+    width: 100%;
+    height: 100%;
+    padding: 50px;
+}
+
+.judul{
+    margin: auto;
+    margin-top: 210px;
+    font-weight: bold;
+    font-size: 40px;
+    text-align: center;
+    color: #c6e29d;
+    margin-top: 160px;
+}
+
+.selamat{
+    display: flex;
+    margin-top: 10px;
+    font-weight: bold;
+    font-size: 30px;
+    text-align: center;
+    color: #c6e29d;
+}
+
+.masuk{
+    margin-top: 160px;
+    color: #2f493b;
+    font-size: 12px;
+}
+
+.button{
+    margin-top: 40px;
 }
 
 button{
-    background-color: #3F4D34;
+    margin: auto;
+    margin-top: 20px;
+    display: block;
+    background-color: #c6e29d;
     width: 50%;
     padding: 10px;
-    padding-bottom: 15px;
-    padding-top: 15px;
-    margin-top: 8px;
-    margin-bottom: 8px;
-    font-family: 'Montserrat';
-    font-weight: 700;
-    font-size: small;
-    color: #C2CB96;
-    border-radius: 40px;
-    border: 0;
+    padding-bottom: 13px;
+    padding-top: 13px;
+    border-radius: 30px;
+    border: 0px;
+    font-weight: bold;
+    color: #2f493b;
+    box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.17);
 }
 
 button:hover{
-    background-color: #162113;
-    color: #C2CB96;
-}
-
-h4{
-    margin-top: 10px;
-    margin-bottom: 20px;
-    font-weight: 700;
-    font-size: small;
+    background-color: #2f493b;
+    color: #c6e29d;
 }
