--- a/login/views/dosen/dashboard.ejs
+++ b/login/views/dosen/dashboard.ejs
@@ -4,21 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="dashdosen.css">
 </head>
 <body>
     <div class="sidebar">
         <div class="circle"></div>
         <div class="keterangan">
             <div class="nama">[Nama Mahasiswa]</div>
-            <div class="nim">[NIM Mahasiswa]</div>
+            <div class="nip">[NIP Dosen]</div>
         </div>
         <div class="isi">
             <a href=""><h4 class="dashboard">Dashboard</h4></a><br>
-            <a href=""><h4>Pengajuan</h4></a><br>
-            <a href=""><h4>Notifikasi</h4></a><br>
-            <a href=""><h4>Status</h4></a><br>
-            <a href=""><h4>History</h4></a><br>
+            <a href=""><h4>Nilai</h4></a>
             <div class="titik"></div>
         </div>
     </div>
