--- a/login/public/dashadmin.css
+++ b/login/public/dashadmin.css
@@ -54,7 +54,7 @@ body{
     height: 32px;
     border-radius: 0px 6px 6px 0px;
     margin-left: 0px;
-    margin-top: -161.5%;
+    margin-top: -86.5%;
     position: absolute;
     z-index: 2;
 
@@ -82,7 +82,7 @@ a{
 }
 
 .isi{
-    margin-top: 270px;
+    margin-top: 230px;
     position: absolute;
 }
 
@@ -102,7 +102,7 @@ a{
     margin-left: 49px;
 }
 
-.nim{
-    margin-left: 8px;
+.jurusan{
+    margin-left: 36px;
     margin-top: 7px;
 }
