--- a/login/public/changePassMhs.css
+++ b/login/public/changePassMhs.css
@@ -46,7 +46,7 @@ body{
     margin-left: 78px;
   }
 
-  .titik{
+.titik{
     background-color: #c6e29d;
     max-width: 100%;
     width: 13px;
@@ -54,7 +54,7 @@ body{
     height: 32px;
     border-radius: 0px 6px 6px 0px;
     margin-left: 0px;
-    margin-top: -83.5%;
+    margin-top: -181.5%;
     position: absolute;
     z-index: 2;
 
@@ -100,13 +100,67 @@ a{
     position: absolute;
     margin-top: 150px;
     color: #ffffff;
-    margin-left: 49px;
+    margin-left: 75px;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.profile-card {
+    padding: 20px;
+    margin-left: 600px;
+    margin-top: 200px;
+    background-color: #c6e29d;
+    max-width: 100%;
+    width: 520px;
+    border-radius: 20px;
+}
+.profile-header {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    z-index: 2;
+    margin-bottom: 30px;
+}
+.profile-field {
+    margin-bottom: 20px;
+    z-index: 2;
+}
+.profile-field label {
+    font-weight: bold;
+}
+
+.ubah{
+    margin-left: 300px;
+    margin-top: 40px;
+    display: block;
+    background-color: #536653;
+    width: 35%;
+    padding: 10px;
+    padding-bottom: 13px;
+    padding-top: 13px;
+    border-radius: 30px;
+    border: 0px;
+    font-weight: bold;
+    color: #c6e29d;
+    box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.17);
+}
+
+.ubah:hover{
+    color: #c6e29d;
+    background-color: #233323;
+}
+
+input{
+    width: 100%;
+    max-width: 270px;
+    padding: 7px;
+    border-radius: 10px;
+    border-color: #233323;
+    border-style: double ;
+    margin-top: 5px;
 }
 
 .nim{
-    margin-left: 45px;
+    margin-left: 23px;
 }
 
-.nama{
-    margin-left: -15px
-}
