--- a/login/public/home.css
+++ b/login/public/home.css
@@ -54,7 +54,7 @@ body{
     height: 32px;
     border-radius: 0px 6px 6px 0px;
     margin-left: 0px;
-    margin-top: -161.5%;
+    margin-top: -181.5%;
     position: absolute;
     z-index: 2;
 
@@ -79,10 +79,11 @@ h4:hover{
 
 a{
     text-decoration: none;
+    color: #c6e29d;
 }
 
 .isi{
-    margin-top: 270px;
+    margin-top: 240px;
     position: absolute;
 }
 
@@ -99,10 +100,12 @@ a{
     position: absolute;
     margin-top: 150px;
     color: #ffffff;
-    margin-left: 49px;
+    margin-left: 75px;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .nim{
-    margin-left: 8px;
-    margin-top: 7px;
+    margin-left: 23px;
 }
+
