--- a/login/public/login.css
+++ b/login/public/login.css
@@ -17,8 +17,8 @@ body{
 .container{
     max-width: 1000px;
     width: 100%;
-    height: 110%;
-    max-height: 900px;
+    height: 100%;
+    max-height: 530px;
     background-color: white;
     display: flex;
     text-align: center;
@@ -31,7 +31,7 @@ body{
     padding: 0px;
     margin-left: 280px;
     margin-top: 100px;
-    
+    position: fixed;
 }
 
 .kanan{
@@ -109,4 +109,9 @@ button{
 button:hover{
     background-color: #233323;
     color: #c6e29d;
+}
+
+.error{
+    z-index: 7;
+    color: red;
 }
