--- a/login/views/mahasiswa/home.ejs
+++ b/login/views/mahasiswa/home.ejs
@@ -3,20 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard Admin</title>
-    <link rel="stylesheet" href="/dashadmin.css">
+    <title>Home</title>
+    <link rel="stylesheet" href="/home.css">
 </head>
 <body>
     <div class="sidebar">
         <div class="circle"></div>
         <div class="keterangan">
-            <a href="/admin/profile">
-                <span><%= user.jurusan %></span>
-                </a>
+            <a href="/mahasiswa/profile">
+                <div class="nama"><%= user.nama %></div>
+                <div class="nim"><%= user.nim_nip %></div>
+            </a>
         </div>
         <div class="isi">
             <a href=""><h4 class="dashboard">Dashboard</h4></a><br>
-            <a href=""><h4>Pengelolaan</h4></a><br>
+            <a href=""><h4>Pengajuan</h4></a><br>
+            <a href=""><h4>Notifikasi</h4></a><br>
+            <a href=""><h4>Status</h4></a><br>
             <a href=""><h4>History</h4></a><br>
             <form id="logoutForm" action="/logout" method="POST">
                 <button type="submit" onclick="logout()" style="background:none; border:none; cursor:pointer;"><h4>Logout</h4></button>
@@ -26,6 +29,7 @@
     </div>
     <div class="container">
     </div>
+
     <script>
         function logout() {
             fetch('/logout', {
