--- a/login/views/dosen/dashboard.ejs
+++ b/login/views/dosen/dashboard.ejs
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div class="sidebar">
-        <div class="circle"></div>
+        <div class="contcircle">
+            <div class="circle"></div>
+        </div>
         <div class="keterangan">
             <a href="/dosen/profile">
                 <div class="nama"><%= user.nama %></div>
@@ -16,8 +18,8 @@
             </a>
         </div>
         <div class="isi">
-            <a href=""><h4 class="dashboard">Dashboard</h4></a><br>
-            <a href=""><h4>Nilai</h4></a><br>
+            <a href="/dosen/dashboard"><h4 class="dashboard">Dashboard</h4></a><br>
+            <a href="/dosen/nilai"><h4>Nilai</h4></a><br>
             <form id="logoutForm" action="/logout" method="POST">
                 <button type="submit" onclick="logout()" style="background:none; border:none; cursor:pointer;"><h4>Logout</h4></button>
             </form>
@@ -25,6 +27,11 @@
         </div>
     </div>
     <div class="container">
+        <div class="container2">
+            <h1>Selamat Datang!</h1>
+            <h3>Silahkan masukkan nilai mahasiswa</h3>
+            <a href="/dosen/nilai"><button class="mulai">mulai</button></a>
+        </div>
     </div>
     <script>
         function logout() {
