--- a/public/nilai.css
+++ b/public/nilai.css
@@ -208,6 +208,29 @@ h2{
       z-index: -1;
     }
   }
+
+  .select_nilai {
+    margin-left: 0px;
+    position: relative;
+    float: left;
+    width: 100%;
+    max-width: 210px;
+    height: 100%;
+    max-height: 40px;
+    color: #777;
+    font-weight: 500;
+    padding: 0px;
+    border-radius: 13px 13px 13px 13px;
+    transition: all 375ms ease-in-out;
+  /* Oculto el elemento select */
+    select {
+    position: absolute;
+    overflow: hidden;
+    height: 0px;
+    opacity: 0;  
+      z-index: -1;
+    }
+  }
   
   .cont_list_select_mate {
     position: relative;
@@ -283,10 +306,16 @@ h2{
 
   .kiri{
     border-radius: 15px 0px 00px 0px;
+    max-width: 10px;
+  }
+  
+  .tengah{
+    padding-right: 110px;
   }
   
   .kanan{
     border-radius: 0px 15px 0px 0px;
+    max-width: 40px;
   }
   
   table td, table th {
