--- a/public/nilai.css
+++ b/public/nilai.css
@@ -164,134 +164,58 @@ h2{
     margin-left: 30px;
 }
 
-.dropdown-container{
-    width: 100%;
-    max-width: 1240px;
-    margin-top: 35px;
-    display: flex;
-    display: flex;
-    justify-content: center; 
-    align-items: center;     
-    text-align: center;
+h3{
+  display: inline-flex;
+  font-weight: 500;
+  font-size: 15px;
 }
 
-  
-  .icon_select_mate {
-    position: absolute;
-    top:10px;
-    right: 7%;
-    font-size: 16px;
-      height: 22px;
-    transition: all 275ms;
-  }
-  
-  .select_mate {
-    margin-left: 70px;
-    position: relative;
-    float: left;
-    width: 100%;
-    max-width: 210px;
-    height: 100%;
-    max-height: 40px;
-    color: #777;
-    font-weight: 500;
-    background-color: #fff;
-    box-shadow: 1px 2px 10px -2px rgba(0,0,0,0.3);
-    border-radius: 13px 13px 13px 13px;
-    transition: all 375ms ease-in-out;
-  /* Oculto el elemento select */
-    select {
-    position: absolute;
-    overflow: hidden;
-    height: 0px;
-    opacity: 0;  
-      z-index: -1;
-    }
-  }
+.judul1{
+  margin-left: 0px;
+  margin-top: 40px;
+  width: 100%;
+  max-width: 170px;
+}
 
-  .select_nilai {
-    margin-left: 0px;
-    position: relative;
-    float: left;
-    width: 100%;
-    max-width: 210px;
-    height: 100%;
-    max-height: 40px;
-    color: #777;
-    font-weight: 500;
-    padding: 0px;
-    border-radius: 13px 13px 13px 13px;
-    transition: all 375ms ease-in-out;
-  /* Oculto el elemento select */
-    select {
-    position: absolute;
-    overflow: hidden;
-    height: 0px;
-    opacity: 0;  
-      z-index: -1;
-    }
-  }
-  
-  .cont_list_select_mate {
-    position: relative;
-    float: left;
-    width: 100%;
-  }
-  
-  .cont_select_int {
-   position: absolute;
-    left: 0px;
-    top: 0px;
-    z-index: 999;
-    overflow: hidden;
-    height: 0px;
-    width: 100%;
-    background-color: #fff;
-    padding: 0px;
-    margin-bottom: 0px;
-    margin-top: 10px;
-    border-radius: 13px 13px 13px 13px;
-    box-shadow: 1px 4px 10px -2px rgba(0, 0, 0, 0.2);
-    transition: all 375ms ease-in-out;
-  
-      li {
-      position: relative;
-      float: left;
-      width: 96%;
-      border-bottom:1px solid #E0E0E0;
-      background-color: #F5F5F5;
-      list-style-type: none;
-      padding: 10px 2%;
-      margin: 0px;  
-      transition: all 275ms ease-in-out;
-      display: block;
-      cursor:pointer;
-          
-          &:last-child {
-          border-radius: 3px;
-          border-bottom:0px; 
-  
-          }
-           &:hover {
-          background-color: #EEEEEE;
-           } 
-       }
-  
-     .active {
-     background-color: #EEEEEE;
-     }
-  
-  }
-  
-  /* etiqueta <p> con la opcion selecionada  */
-  .selecionado_opcion {
-      padding: 10px 2%;
-      width: 96%;
-      display: block;
-      margin: 0px;
-      cursor: pointer;
-      margin-left: -7px;
-  }
+.judul2{
+  margin-left: 310px;
+  margin-top: -76px;
+  width: 100%;
+  max-width: 100px;
+  position: absolute
+}
+
+select{
+  padding: 5px;
+  border-radius: 15px;
+  padding-right: 20px;
+  padding-left: 20px;
+}
+
+.tahunAjaran{
+  margin-left: 0px;
+  margin-right: 950px;
+  margin-top: 8px;
+}
+
+.mataKuliah{
+  margin-left: 310px;
+  margin-top: -49px;
+  position: absolute;
+}
+
+.update{
+  padding: 8px;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-radius: 25px;
+  border: none;
+  position: absolute;
+}
+
+.buttonUpdate{
+  margin-right: -1000px;
+}
   
   table {
     border-collapse: collapse;
@@ -317,6 +241,12 @@ h2{
     border-radius: 0px 15px 0px 0px;
     max-width: 40px;
   }
+
+  .table{
+    margin-left: 90px;
+    margin-top: -40px;
+  }
+
   
   table td, table th {
     padding: 8px;
