--- a/views/dosen/dashboard.ejs
+++ b/views/dosen/dashboard.ejs
@@ -9,7 +9,9 @@
   <body>
     <div class="sidebar">
       <div class="contcircle">
-        <div class="circle"></div>
+        <div class="circle">
+          <img src="/Gambar/profile.png" alt="">
+        </div>
       </div>
       <div class="keterangan">
         <a href="/dosen/profile">
