--- a/public/login.css
+++ b/public/login.css
@@ -14,6 +14,12 @@ body{
     font-family: 'Montserrat';
 }
 
+img{
+    max-width: 170px;
+    margin-top: -120px;
+    margin-bottom: 30px;
+}
+
 .container{
     max-width: 1000px;
     width: 100%;
@@ -75,9 +81,10 @@ h4{
 }
 
 h2{
-    color: #c6e29d;
-    font-size: 30px;
-    text-shadow: 2px 2px #233323;
+    color: #ffffff;
+    font-size: 28px;
+    text-shadow: 2px 2px #233323c1;
+    font-weight: 600;
 }
 
 .masuk{
