--- a/public/nilai.css
+++ b/public/nilai.css
@@ -56,6 +56,12 @@ body{
     margin-top: -280px;
 }
 
+img{
+  height: 76px;
+  width: 76px;
+  border-radius: 50%;
+}
+
 .titik{
     background-color: #c6e29d;
     max-width: 100%;
@@ -146,22 +152,11 @@ form{
     text-align: center; 
 }
 
-#search{
-    max-width: 400px;
-    width: 100%;
-    padding: 8px;
-    border: none;
-    border-radius: 20px;
-    position: absolute;
-    margin-left: 180px;
-    margin-top: -30px;
-    box-shadow: 1px 2px 10px -2px rgba(0,0,0,0.3);
-}
 
 h2{
     display: flex;
-    margin-top: 30px;
-    margin-left: 30px;
+    margin-top: 50px;
+    margin-left: 50px;
 }
 
 h3{
@@ -171,14 +166,14 @@ h3{
 }
 
 .judul1{
-  margin-left: 0px;
+  margin-left: 20px;
   margin-top: 40px;
   width: 100%;
   max-width: 170px;
 }
 
 .judul2{
-  margin-left: 310px;
+  margin-left: 330px;
   margin-top: -76px;
   width: 100%;
   max-width: 100px;
@@ -188,18 +183,23 @@ h3{
 select{
   padding: 5px;
   border-radius: 15px;
-  padding-right: 20px;
+  padding-right: 10px;
   padding-left: 20px;
 }
 
+.nilaiHuruf{
+  border-radius: 5px;
+  border-style: none;
+}
+
 .tahunAjaran{
-  margin-left: 0px;
+  margin-left: 30px;
   margin-right: 950px;
   margin-top: 8px;
 }
 
 .mataKuliah{
-  margin-left: 310px;
+  margin-left: 330px;
   margin-top: -49px;
   position: absolute;
 }
@@ -228,19 +228,6 @@ select{
     border-radius: 15px;
   }
 
-  .kiri{
-    border-radius: 15px 0px 00px 0px;
-    max-width: 10px;
-  }
-  
-  .tengah{
-    padding-right: 110px;
-  }
-  
-  .kanan{
-    border-radius: 0px 15px 0px 0px;
-    max-width: 40px;
-  }
 
   .table{
     margin-left: 90px;
@@ -249,15 +236,25 @@ select{
 
   
   table td, table th {
-    padding: 8px;
+    padding: 12px;
+    padding-left: 25px;
   }
+
   
   table tr:nth-child(even){background-color: #f4faeb;}
   
   table tr:hover {background-color: #c6e29d;}
+
+  .thNim{
+    width: 20%;
+  }
+
+  .thNama{
+    width: 50%;
+  }
   
   table th {
-    padding-top: 12px;
+    padding-top: 18px;
     padding-bottom: 12px;
     text-align: left;
     background-color: #deedc8;
