--- a/public/pengajuan.css
+++ b/public/pengajuan.css
@@ -68,10 +68,17 @@ img{
     max-height: 100%;
     height: 32px;
     border-radius: 0px 6px 6px 0px;
-    margin-top: -145px;
+    margin-top: -250px;
     position: absolute;
     z-index: 2;
 
+}
+
+h1{
+    font-size: 25px;
+    margin-top: 40px;
+    margin-left: 40px;
+    position: absolute;
 }
 
 h4{
@@ -99,6 +106,47 @@ a{
 .isi{
     margin-top: 240px;
     position: absolute;
+    justify-content: center; 
+    align-items: center;     
+    text-align: center;  
+    width: 100%;
+    max-width: 220px;
+}
+
+.isi2{
+    margin-top: 150px;
+}
+
+label{
+    margin-left: -930px;
+    font-weight: bold;
+}
+
+.label{
+    padding: 8px;
+    margin-bottom: 8px;
+}
+
+.alasan{
+    margin-left: -995px;
+}
+
+.file{
+    margin-left: -800px;
+}
+
+.submit{
+    padding-top: 15px;
+    margin-left: -660px;
+}
+
+textarea{
+    padding: 10px;
+    min-height: 150px;
+    min-width: 700px;
+    margin-left: 305px;
+    border-radius: 15px;
+    box-shadow: 0px 4px 8px 0px #0000006d;
 }
 
 .container{
@@ -110,7 +158,7 @@ a{
     margin-left: -235px;
 }
 
-.keterangan{
+.keterangan {
     position: absolute;
     width: 100%;
     max-width: 220px;
@@ -122,72 +170,13 @@ a{
     margin-top: -200px;
 }
 
-.profile-card {
-    padding: 20px;
-    background-color: #c6e29d00;
-    max-width: 100%;
-    width: 520px;
-    border-radius: 20px;
-    margin: 3rem;
-}
-.profile-header {
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 10px;
-    z-index: 2;
-    margin-bottom: 30px;
-    text-align: start;
-}
-.profile-field {
-    margin-bottom: 20px;
-    z-index: 2;
-    text-align: start;
-}
-.profile-field label {
-    font-weight: bold;
+form{
+    margin-left: -95px;
 }
 
-.ubah{
-    margin-top: 40px;
-    display: block;
-    background-color: #536653;
-    width: 35%;
-    padding: 10px;
-    padding-bottom: 13px;
-    padding-top: 13px;
-    border-radius: 30px;
-    border: 0px;
-    font-weight: bold;
-    color: #c6e29d;
-    box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.17);
-}
-
-.ubah:hover{
-    color: #c6e29d;
-    background-color: #233323;
-}
-
-input{
-    width: 100%;
-    max-width: 270px;
-    padding: 9px;
-    padding-left: 10px;
-    border-radius: 30px;
-    border-color: #233323;
-    border-style: double ;
-    margin-top: 5px;
-    border: 0px;
-    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.34);
-}
-
-input::placeholder{
-    font-family: Montserrat;
-    font-weight: 500;
-}
 .nama, .nim {
     margin: auto;
 }
-
 
 .container2{
     background-color: #23332300;
@@ -202,5 +191,29 @@ input::placeholder{
     margin-left: 260px;
     z-index: 3;
     text-align: center; 
+}
+
+.buttonSub{
+    display: block;
+    background-color: #536653;
+    width: 7%;
+    padding: 10px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    border-radius: 30px;
+    border: 0px;
+    font-weight: bold;
+    color: #ffffff;
+    box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.17);
+    margin: auto;
+    margin-right: 490px;
+    margin-top: 15px;
+    font-weight: 400;
+    letter-spacing: 1px;
+}
+
+.buttonSub:hover{
+    color: #c6e29d;
+    background-color: #233323;
 }
 
