--- a/public/statusMhs.css
+++ b/public/statusMhs.css
@@ -59,7 +59,7 @@ body {
   margin-top: -280px;
 }
 
-img {
+.profilePNG {
   height: 76px;
   width: 76px;
   border-radius: 50%;
@@ -72,7 +72,7 @@ img {
   max-height: 100%;
   height: 32px;
   border-radius: 0px 6px 6px 0px;
-  margin-top: -310px;
+  margin-top: -143px;
   position: absolute;
   z-index: 2;
 }
@@ -94,7 +94,7 @@ h4:hover {
   color: #c6e29d;
 }
 
-a {
+.sidebar a {
   text-decoration: none;
   color: #c6e29d;
 }
@@ -154,30 +154,73 @@ form {
   text-align: center;
 }
 
+.container2 .status-list {
+  margin-top: 10px;
+}
+
 h1 {
-  margin-bottom: 3px;
-  margin-top: 280px;
-}
-
-.mulai {
-  display: block;
-  background-color: #536653;
-  width: 9%;
-  padding: 10px;
-  padding-bottom: 10px;
-  padding-top: 10px;
-  border-radius: 30px;
-  border: 0px;
-  font-weight: bold;
-  color: #ffffff;
-  box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.17);
   margin: auto;
-  margin-top: 15px;
-  font-weight: 400;
-  letter-spacing: 1px;
+  margin-top: 40px;
 }
 
-.mulai:hover {
-  color: #c6e29d;
-  background-color: #233323;
+.detail{
+  background-color: #ffffff;
+  width: 1000px;
+  height: 60px;
+  border-radius: 10px;
+  transition: 0.5s;
+  padding: 18px;
+  margin: auto;
+  margin-top: 40px;
 }
+
+.detail:hover{
+  height: 170px;
+}
+
+h3{
+  color: #000000;
+  text-align: start;
+}
+
+p{
+  color: #000000;
+  text-align: justify;
+}
+
+.container .detail .konten .atas{
+  margin-bottom: 10px;
+}
+
+.container .detail .konten{
+  width: 100%;
+  height: 35px;
+  overflow: hidden;
+  transition: 0.5s;
+}
+
+.container .detail:hover .konten{
+  height: 250px;
+}
+
+.download{
+  width: 40px;
+  height: 35px;
+  border-color: #000000;
+  border-style: solid;
+  border-width: 2px;
+  border-radius: 5px;
+  padding: 2px;
+  margin-right: -300px;
+}
+
+.icon{
+  margin: 2px;
+}
+
+.preview{
+  padding: 4px;
+}
+
+
+
