--- a/views/admin/pengelolaan.ejs
+++ b/views/admin/pengelolaan.ejs
@@ -3,28 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
-    <link rel="stylesheet" href="/home.css" />
+    <title>Pengelolaan - Admin</title>
+    <link rel="stylesheet" href="/pengelolaanAdm.css" />
   </head>
   <body>
     <div class="sidebar">
-      <div class="contcircle">
-        <div class="circle">
-          <img src="/Gambar/profile.png" alt="">
-        </div>
-      </div>
+      <div class="circle"></div>
       <div class="keterangan">
-        <a href="/dosen/profile">
-          <div class="nama"><%= user.nama %></div>
-          <div class="nim"><%= user.nim_nip %></div>
+        <a href="/admin/profile">
+          <span><%= user.jurusan %></span>
         </a>
       </div>
       <div class="isi">
-        <a href="home"><h4 class="dashboard">Dashboard</h4></a><br />
-        <a href="pengajuan"><h4>Pengajuan</h4></a><br />
-        <a href="notifikasi"><h4>Notifikasi</h4></a><br />
-        <a href="status"><h4>Status</h4></a><br />
-        <a href="history"><h4>History</h4></a><br />
+        <a href="dashboard"><h4>Dashboard</h4></a><br />
+        <a href="pengelolaan"><h4 class="dashboard">Pengelolaan</h4></a><br />
+        <a href=""><h4>History</h4></a><br />
         <form id="logoutForm" action="/logout" method="POST">
           <button
             type="submit"
@@ -37,11 +30,34 @@
         <div class="titik"></div>
       </div>
     </div>
+
     <div class="container">
       <div class="container2">
-        <h1>Selamat Datang!</h1>
-        <h3>Silahkan ajukan transkrip</h3>
-        <a href="pengajuan"><button class="mulai">mulai</button></a>
+        <h3>Pengelolaan Pengajuan</h3>
+        <div class="atas">
+          <div class="pengajuan">
+            <h1>Pengajuan</h1>
+            <hr />
+            <a href="listPengajuan" class="more">more info</a>
+          </div>
+          <div class="disetujui">
+            <h1>Disetujui</h1>
+            <hr />
+            <a href="listDisetujui" class="more">Disetujui</a>
+          </div>
+        </div>
+        <div class="bawah">
+          <div class="ditolak">
+            <h1>Ditolak</h1>
+            <hr />
+            <a href="listDitolak" class="more">Ditolak</a>
+          </div>
+          <div class="history">
+            <h1>History</h1>
+            <hr />
+            <a href="history" class="more">History</a>
+          </div>
+        </div>
       </div>
     </div>
 
