--- a/views/dosen/changePass.ejs
+++ b/views/dosen/changePass.ejs
@@ -4,7 +4,11 @@
 </head>
 <body>
     <div class="sidebar">
-        <div class="circle"></div>
+        <div class="contcircle">
+            <div class="circle">
+                <img src="/Gambar/profile.png" alt="">
+            </div>
+        </div>
         <div class="keterangan">
             <a href="/dosen/profile">
                 <div class="nama"><%= user.nama %></div>
@@ -12,8 +16,8 @@
             </a>
         </div>
         <div class="isi">
-            <a href=""><h4 class="dashboard">Dashboard</h4></a><br>
-            <a href=""><h4>Nilai</h4></a><br>
+            <a href="/dosen/dashboard"><h4 class="dashboard">Dashboard</h4></a><br>
+            <a href="/dosen/nilai"><h4>Nilai</h4></a><br>
             <form id="logoutForm" action="/logout" method="POST">
                 <button type="submit" onclick="logout()" style="background:none; border:none; cursor:pointer;"><h4>Logout</h4></button>
             </form>
@@ -21,25 +25,27 @@
         </div>
     </div>
     <div class="container">
+        <div class="container2">
         <div class="profile-card">
-            <div class="profile-header">Password</div>
+            <div class="profile-header">Ubah Password</div>
             <div class="kanan">
                 <form action="/dosen/changePass" method="POST">
                     <div class="profile-field">
                         <label>Password Saat Ini</label><br>
-                        <input type="password" placeholder="masukkan password" name="currentPassword" required>
+                        <input type="password" placeholder="Masukkan password" name="currentPassword" required>
                     </div>
                     <div class="profile-field">
                         <label>Password Baru</label><br>
-                        <input type="password" placeholder="masukkan password baru" name="newPassword" required>
+                        <input type="password" placeholder="Masukkan password baru" name="newPassword" required>
                     </div>
                     <div class="profile-field">
                         <label>Konfirmasi Password</label><br>
-                        <input type="password" placeholder="masukkan password baru" name="confirmPassword" required>
+                        <input type="password" placeholder="Masukkan password baru" name="confirmPassword" required>
                     </div>
                     <button class="ubah" type="submit">Simpan Perubahan</button>
                 </form>
             </div>
+        </div>
         </div>
     </div>
 
