--- a/views/dosen/profile.ejs
+++ b/views/dosen/profile.ejs
@@ -9,7 +9,9 @@
 <body>
     <div class="sidebar">
         <div class="contcircle">
-            <div class="circle"></div>
+            <div class="circle">
+                <img src="/Gambar/profile.png" alt="">
+            </div>
         </div>
         <div class="keterangan">
             <a href="/dosen/profile">
@@ -27,6 +29,7 @@
         </div>
     </div>
     <div class="container">
+        <div class="container2">
         <div class="profile-card bg-white">
             <div class="profile-header">Profile</div>
             <div class="profile-field">
@@ -52,6 +55,7 @@
             <a href="/dosen/profile/changePass">
                 <button class="ubah"> Ubah Password</button>
             </a>
+        </div>
     </div>
 
     <script>
