--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,6 +11,7 @@
     <div class="container">
         
         <div class="kiri">
+            <img src="/Gambar/logo.png" alt="">
             <h2>Selamat Datang<br>di Web Transkrip Nilai</h2>
         </div>
         <div class="kanan">
